# http-client-examples-java

./: .bazelrc  .gitignore  MODULE.bazel  README.md  maven_install.json
travelvac-client-basic/: BUILD.bazel
travelvac-client-basic/src/main/java/travelvac/client/basic/: BUILD.bazel  TravelvacBasicClient.java  TravelvacBasicClientConfig.java
travelvac-client-basic/src/main/java/travelvac/client/basic/devapp/: BUILD.bazel  TravelvacBasicDevApp.java
travelvac-client-basic/src/main/java/travelvac/client/basic/types/: BUILD.bazel  Booking.java  Clinic.java  GetBookingsResponse.java  GetClinicsResponse.java  GetRisksResponse.java  NewBooking.java  Risk.java
travelvac-client-basic/src/main/resources/: BUILD.bazel
travelvac-client-monitoring/: BUILD.bazel  docker-compose.yml  prometheus.yml
travelvac-client-monitoring/grafana/dashboards/: Atlantis-Travelvac-1768340597640.json  dashboard.yml
travelvac-client-monitoring/grafana/datasources/: default.yml
travelvac-client-monitoring/src/main/java/travelvac/client/monitoring/: BUILD.bazel  HttpException.java  Measurement.java  MetricsServer.java  Outcome.java  ResponseReadException.java  TravelvacException.java  TravelvacMonitoringClient.java  TravelvacMonitoringClientConfig.java
travelvac-client-monitoring/src/main/java/travelvac/client/monitoring/devapp/: BUILD.bazel  TravelvacMonitoringDevApp.java
travelvac-client-monitoring/src/main/java/travelvac/client/monitoring/types/: BUILD.bazel  Booking.java  Clinic.java  GetBookingsResponse.java  GetClinicsResponse.java  GetRisksResponse.java  NewBooking.java  Risk.java
travelvac-client-monitoring/src/main/resources/: BUILD.bazel  logback.xml
travelvac-service/: BUILD.bazel
travelvac-service/src/main/java/itollu/travelvac/service/adapters/: BUILD.bazel  BookingRepositoryInMem.java  ClinicRepositoryDemo.java  RiskRepositoryDemo.java
travelvac-service/src/main/java/itollu/travelvac/service/app/: BUILD.bazel  TravelvacApp.java
travelvac-service/src/main/java/itollu/travelvac/service/core/: BUILD.bazel  Booking.java  BookingId.java  BookingRepository.java  BookingService.java  Clinic.java  ClinicId.java  ClinicRepository.java  ClinicService.java  CountryCode.java  CustomerId.java  IdWithPrefix.java  IdempotencyKey.java  IdempotencyMapping.java  IllegalDomainValue.java  NewBooking.java  Risk.java  RiskRepository.java  RiskService.java
travelvac-service/src/main/java/itollu/travelvac/service/handlers/: AuthUtils.java  BUILD.bazel  BookingJson.java  ClientException.java  ClientExceptionHandler.java  GetBooking.java  GetBookings.java  GetClinics.java  GetRisks.java  GetStatus.java  HandlerUtils.java  Handlers.java  InternalServerErrorHandler.java  Middleware.java  PostBooking.java  Routes.java  TravelvacHandler.java
travelvac-service/src/main/java/travelvac/service/adapters/: BUILD.bazel  BookingRepositoryInMem.java  ClinicRepositoryDemo.java  RiskRepositoryDemo.java
travelvac-service/src/main/java/travelvac/service/app/: BUILD.bazel  TravelvacApp.java
travelvac-service/src/main/java/travelvac/service/core/: BUILD.bazel  Booking.java  BookingId.java  BookingRepository.java  BookingService.java  Clinic.java  ClinicId.java  ClinicRepository.java  ClinicService.java  CountryCode.java  CustomerId.java  IdWithPrefix.java  IdempotencyKey.java  IdempotencyMapping.java  IllegalDomainValue.java  NewBooking.java  Risk.java  RiskRepository.java  RiskService.java
travelvac-service/src/main/java/travelvac/service/handlers/: AuthUtils.java  BUILD.bazel  BookingJson.java  ClientException.java  ClientExceptionHandler.java  GetBooking.java  GetBookings.java  GetClinics.java  GetRisks.java  GetStatus.java  HandlerUtils.java  InternalServerErrorHandler.java  Middleware.java  PostBooking.java  RateLimitExceptionHandler.java  TravelvacHandler.java
travelvac-service/src/main/java/travelvac/service/http/: AuthUtils.java  BUILD.bazel  BookingJson.java  ClientException.java  ClientExceptionHandler.java  ClinicJson.java  GetBooking.java  GetBookings.java  GetClinics.java  GetRisks.java  GetStatus.java  HandlerUtils.java  InternalServerErrorHandler.java  Middleware.java  PostBooking.java  RateLimitExceptionHandler.java  TravelvacHandler.java
travelvac-service/src/main/java/travelvac/service/ratelimiter/: BUILD.bazel  RateLimitExhaustedException.java  RateLimiter.java
travelvac-service/src/main/resources/: BUILD.bazel
