bazel_dep(name = "rules_java", version = "9.3.0",)
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.undertow:undertow-core:2.3.18.Final"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")