bazel_dep(name = "rules_java", version = "9.3.0",)
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "ch.qos.logback:logback-classic:1.5.23",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "io.undertow:undertow-core:2.3.20.Final",
        "org.slf4j:slf4j-api:2.0.17"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
    fetch_sources = True,
)
use_repo(maven, "maven")