bazel_dep(name = "rules_java", version = "9.3.0",)
bazel_dep(name = "rules_jvm_external", version = "6.9")

VERSION_JACKSON = "2.20.1"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "ch.qos.logback:logback-classic:1.5.23",
        "com.fasterxml.jackson.core:jackson-core:%s" % VERSION_JACKSON,
        "com.fasterxml.jackson.core:jackson-databind:%s" % VERSION_JACKSON,
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:%s" % VERSION_JACKSON,
        "io.undertow:undertow-core:2.3.20.Final",
        "org.jetbrains:annotations:26.0.2-1",
        "org.slf4j:slf4j-api:2.0.17"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
    fetch_sources = True,
)
use_repo(maven, "maven")