java_library(
  name = "app",
  srcs = glob(["*.java"]),
  deps = [
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
    "@maven//:io_undertow_undertow_core",
    "//travelvac-service/src/main/java/travelvac/service/adapters",
    "//travelvac-service/src/main/java/travelvac/service/core",
    "//travelvac-service/src/main/java/travelvac/service/handlers",
  ],
  visibility = [
    "//travelvac-service:__pkg__",
  ],
)