java_library(
  name = "http",
  srcs = glob(["*.java"]),
  deps = [
    "@maven//:com_fasterxml_jackson_core_jackson_core",
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
    "@maven//:io_undertow_undertow_core",
    "@maven//:org_slf4j_slf4j_api",
    "//travelvac-service/src/main/java/travelvac/service/core",
    "//travelvac-service/src/main/java/travelvac/service/ratelimiter"
  ],
  visibility = [
      "//travelvac-service:__subpackages__",
  ],
)