java_library(
  name = "devapp",
  srcs = glob(["*.java"]),
  deps = [
    "@maven//:org_slf4j_slf4j_api",
    "//travelvac-client-monitoring/src/main/java/travelvac/client/monitoring",
    "//travelvac-client-monitoring/src/main/java/travelvac/client/monitoring/types",
  ],
  visibility = [
    "//travelvac-client-monitoring:__pkg__",
  ],
)